{
  "sourceLanguage" : "fr",
  "strings" : {
    "containerError.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unable to start Slate"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Impossible de démarrer Slate"
          }
        }
      }
    }
  },
  "version" : "1.0"
}
