...
            "value": "File"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Fichier"
          }
        }
      }
    },
    "editor.blockType.heading1": {
      "extractionState": "manual",
...
